--- a/pseudobulk_pyDeseq2.ipynb
+++ b/pseudobulk_pyDeseq2.ipynb
@@ -557,8 +557,8 @@
     "    \n",
     "    for i, pseudo_rep in enumerate(indices):\n",
     "    \n",
-    "        rep_adata = sc.AnnData(X = samp_cell_subset.X.sum(axis = 0),\n",
-    "                               var = samp_cell_subset.var[[]])\n",
+    "        rep_adata = sc.AnnData(X = samp_cell_subset[indices[i]].X.sum(axis = 0),\n",
+    "                               var = samp_cell_subset[indices[i]].var[[]])\n",
     "\n",
     "        rep_adata.obs_names = [sample + '_' + str(i)]\n",
     "        rep_adata.obs['condition'] = samp_cell_subset.obs['condition'].iloc[0]\n",
