--- a/sc2024/preprocessing.ipynb
+++ b/sc2024/preprocessing.ipynb
@@ -29,6 +29,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "05d4b090-9d8b-4d7f-aad6-53a135a57915",
+   "metadata": {},
+   "source": [
+    "This workflow has been influenced by the work done by the Theis lab: https://www.sc-best-practices.org/preprocessing_visualization/quality_control.html\n",
+    "\n",
+    "I recommend checking them out for additional info and alternative approaches"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c87eae1d-e33e-41fb-abee-b0887ca9be91",
    "metadata": {},
    "source": [
